--- a/App/GOYO/Views/1_MainTab.storyboard
+++ b/App/GOYO/Views/1_MainTab.storyboard
@@ -152,16 +152,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="s4y-LJ-oZ9">
-                                <rect key="frame" x="40" y="148" width="310" height="101"/>
+                                <rect key="frame" x="40" y="148" width="310" height="103.66666666666669"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="장소 내용" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="idi-wJ-Nhv">
-                                        <rect key="frame" x="0.0" y="0.0" width="310" height="44"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="310" height="46.666666666666664"/>
                                         <fontDescription key="fontDescription" name="NanumGothicOTF" family="NanumGothicOTF" pointSize="40"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q6p-1k-Pqo">
-                                        <rect key="frame" x="0.0" y="59" width="310" height="42"/>
+                                        <rect key="frame" x="0.0" y="61.666666666666657" width="310" height="42"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
                                         <color key="tintColor" systemColor="labelColor"/>
                                         <state key="normal" title="장소를 선택해 주세요.  ⌵"/>
@@ -227,24 +227,24 @@
                                 </constraints>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ecL-uf-teV">
-                                <rect key="frame" x="40" y="249" width="310" height="320"/>
+                                <rect key="frame" x="40" y="251.66666666666663" width="310" height="320"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="320" id="Zpg-2l-C6T"/>
                                 </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="locationShowCell" id="wNn-bG-HwZ" customClass="ReportDetailTableViewCell" customModule="GOYO" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.666666030883789" width="310" height="78.333335876464844"/>
+                                        <rect key="frame" x="0.0" y="44.666666030883789" width="310" height="79.666664123535156"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="wNn-bG-HwZ" id="5uD-hv-zan">
-                                            <rect key="frame" x="0.0" y="0.0" width="310" height="78.333335876464844"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="310" height="79.666664123535156"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9UF-gB-jTH">
-                                                    <rect key="frame" x="0.0" y="10.000000000000004" width="58.333333333333336" height="58.333333333333343"/>
+                                                    <rect key="frame" x="0.0" y="9.9999999999999964" width="59" height="59.666666666666657"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DkS-QJ-TrD">
-                                                            <rect key="frame" x="0.0" y="0.0" width="58.333333333333336" height="31.333333333333332"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="59" height="31.333333333333332"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="31.329999999999998" id="Kid-Z2-DUh"/>
                                                             </constraints>
@@ -253,7 +253,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bH5-Lz-dJX">
-                                                            <rect key="frame" x="0.0" y="31.333333333333336" width="58.333333333333336" height="27"/>
+                                                            <rect key="frame" x="0.0" y="31.333333333333336" width="59" height="28.333333333333336"/>
                                                             <fontDescription key="fontDescription" name="NanumGothicOTF" family="NanumGothicOTF" pointSize="24"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
