--- a/App/GOYO/Views/1_MainTab.storyboard
+++ b/App/GOYO/Views/1_MainTab.storyboard
@@ -112,11 +112,6 @@
                             <constraint firstItem="8ft-sk-XMg" firstAttribute="leading" secondItem="uUg-Ms-x4c" secondAttribute="leading" constant="60" id="nWD-lS-IAI"/>
                             <constraint firstItem="Crw-Sk-Xv1" firstAttribute="top" secondItem="L2h-7h-ULB" secondAttribute="bottom" constant="5" id="nbZ-vZ-31d"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="L2h-7h-ULB"/>
-                            </mask>
-                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title=" " id="RGB-XW-5Md">
                         <barButtonItem key="rightBarButtonItem" title="주소 설정" id="Q4C-aU-8Qu">
@@ -148,16 +143,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="s4y-LJ-oZ9">
-                                <rect key="frame" x="40" y="148" width="310" height="101"/>
+                                <rect key="frame" x="40" y="148" width="310" height="103.66666666666669"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="장소 내용" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="idi-wJ-Nhv">
-                                        <rect key="frame" x="0.0" y="0.0" width="310" height="44"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="310" height="46.666666666666664"/>
                                         <fontDescription key="fontDescription" name="NanumGothicOTF" family="NanumGothicOTF" pointSize="40"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q6p-1k-Pqo">
-                                        <rect key="frame" x="0.0" y="59" width="310" height="42"/>
+                                        <rect key="frame" x="0.0" y="61.666666666666657" width="310" height="42"/>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="25"/>
                                         <color key="tintColor" systemColor="labelColor"/>
                                         <state key="normal" title="장소를 선택해 주세요.  ⌵"/>
@@ -223,7 +218,7 @@
                                 </constraints>
                             </stackView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ecL-uf-teV">
-                                <rect key="frame" x="20" y="249" width="350" height="400"/>
+                                <rect key="frame" x="20" y="251.66666666666663" width="350" height="400"/>
                                 <color key="backgroundColor" red="0.99971312280000002" green="0.96884971860000002" blue="0.84112757439999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="400" id="Zpg-2l-C6T"/>
@@ -237,10 +232,10 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9UF-gB-jTH">
-                                                    <rect key="frame" x="12.000000000000004" y="8" width="58.333333333333343" height="58"/>
+                                                    <rect key="frame" x="12" y="8" width="59" height="58"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DkS-QJ-TrD">
-                                                            <rect key="frame" x="0.0" y="0.0" width="58.333333333333336" height="31.333333333333332"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="59" height="31.333333333333332"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="31.329999999999998" id="Kid-Z2-DUh"/>
                                                             </constraints>
@@ -249,7 +244,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bH5-Lz-dJX">
-                                                            <rect key="frame" x="0.0" y="31.333333333333336" width="58.333333333333336" height="26.666666666666664"/>
+                                                            <rect key="frame" x="0.0" y="31.333333333333336" width="59" height="26.666666666666664"/>
                                                             <fontDescription key="fontDescription" name="NanumGothicOTF" family="NanumGothicOTF" pointSize="24"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
